2013-11-01  Julien Bect  <julien.bect@supelec.fr>

	Add the Gaussian correlation function.

	* misc/specfun/stk_sf_gausscorr.m: new function

	Improve the precision of stk_sf_matern around 0 for high nu.

	* misc/specfun/stk_sf_matern.m: modified

2013-10-29  Julien Bect  <julien.bect@supelec.fr>

	Remove obsolete references to example01.m

	* core/stk_predict.m: modified
	* misc/plot/stk_plot1d.m: modified
	* examples/01_kriging_basics/stk_example_kb04.m: modified
	* examples/03_miscellaneous/stk_example_misc01.m: modified

2013-10-28  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of examples 'doe02' and 'doe03'.

	* examples/02_design_of_experiments/stk_example_doe02.m: modified
	* examples/02_design_of_experiments/stk_example_doe03.m: modified

2013-10-26  Julien Bect  <julien.bect@supelec.fr>

	Rewrite example 'doe01'.

	* examples/02_design_of_experiments/stk_example_doe01.m: modified

	Add an optional 'box' argument to stk_sampling_halton_rr2.

	* sampling/stk_sampling_halton_rr2.m: modified

	Rewrite the description of examples 'kb04' and 'kb05'.

	* examples/01_kriging_basics/stk_example_kb04.m: modified
	* examples/01_kriging_basics/stk_example_kb05.m: modified

2013-10-23  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of example 'kb03'.

	* examples/01_kriging_basics/stk_example_kb03.m: modified

2013-10-20  Julien Bect  <julien.bect@supelec.fr>

	Fix a bug in stk_predict and add a test.

	* core/stk_predict.m: modified

2013-10-16  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of example 'kb02'.

	* examples/01_kriging_basics/stk_example_kb02.m: modified

2013-10-15  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of example 'kb01'.

	* examples/01_kriging_basics/stk_example_kb01.m: modified

	Insert an empty line before the example header.

	* misc/text/stk_disp_examplewelcome.m: modified

2013-10-13  Julien Bect  <julien.bect@supelec.fr>
